# nba-career-longevity-mlops

./: .gitignore  README.md  pyproject.toml
config/: infra.yaml  train.yaml
config/model/: catboost.yml  xgboost.yml
data/raw/: nba_players.csv
note/: note_001.md  note_002.md
notebooks/: dev.ipynb
src/nba_longevity/application/: bootstrap.py
src/nba_longevity/application/inference/: run_inference_pipeline.py
src/nba_longevity/application/splitting/: pandas_split.py  spark_split.py
src/nba_longevity/application/training/: run_get_data_pipeline.py  run_training_pipeline.py
src/nba_longevity/domain/dataset/: dataset.py  spark_dataset.py
src/nba_longevity/domain/features/: feature_contract.py  feature_spaces.py
src/nba_longevity/domain/ports/: dataset_loader_port.py  feature_engineering_port.py  feature_selection_port.py  predictor_port.py  preprocessing_port.py  trainer_port.py
src/nba_longevity/domain/preprocessing/: preprocessing_rules.py
src/nba_longevity/infrastructure/config/: settings.py
src/nba_longevity/infrastructure/dataset/: csv_dataset_loader.py  pandas_dataset.py  spark_dataset.py  spark_dataset_loader.py
src/nba_longevity/infrastructure/feature_engineering/: pandas_feature_engineering_adapter.py  pandas_feature_selection_adapter.py  spark_feature_engineering_adapter.py
src/nba_longevity/infrastructure/inference/: catboost_predictor.py  xgboost_predictor.py
src/nba_longevity/infrastructure/logging/: logger.py
src/nba_longevity/infrastructure/metrics/: classification_metrics.py
(+5 files in other folders)
